tests/baselines/reference/ES5For-ofTypeCheck9.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck9.ts(2,15): error TS2461: Type '数字 | 符号 | 文字[]' is not an array type.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck9.ts (1 errors) ====
    var union: string | string[] | number | symbol;
    for (let v of union) { }
                  ~~~~~
!!! error TS2461: Type '数字 | 符号 | 文字[]' is not an array type.